# csvfs

./: .gitignore  README.md  csvfs.py  pyproject.toml
csvfs/: backend.py  main.py
