[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvfs"
version = "1.0.0"
description = "A FUSE-based filesystem for querying and managing CSV files as a database."
authors = [
    { name = "Austin Hamilton", email = "austinhamilton034@gmail.com" }
]
dependencies = [
    "pandas>=2.0.0",
    "fusepy>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["csvfs"]

[project.scripts]
csvfs = "main:main"